# theedit

./: .gitignore  CMakeLists.txt  README.md  run.sh
scripts/: viz.py  viz2.py
src/: gitid_template.cpp  gravity.cpp  gravity.hpp  main.cpp  particle.cpp  particle.hpp  potential.hpp  test.cpp  test.hpp  util.cpp  util.hpp  vectors.cpp  vectors.hpp  version.txt
src/cmake/: FindJsonCpp.cmake  FindOpenEXR.cmake  FindSuiteSparse.cmake  FindTBB.cmake  GetGitRevisionDescription.cmake
